--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>This is a test.</p>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Welcome to my website!</title>
+		<link href="https://JamieRRichards.github.io/bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+		<script src="https://JamieRRichards.github.io/bootstrap/js/bootstrap.min.js"</script>
+	</head>
+	<body>
+		<h1>Hello World</h1>
+		<p>This is a test.</p>
+	</body>
 </html>
