--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Welcome to my website!</title>
-		<link href="https://JamieRRichards.github.io/bootstrap/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-		<script src="https://JamieRRichards.github.io/bootstrap/js/bootstrap.min.js"</script>
+		<link href="https://JamieRRichards.github.io/bootstrap/css/bootstrap.min.css">
+		<script src="https://JamieRRichards.github.io/bootstrap/js/bootstrap.min.js"> </script>
 	</head>
 	<body>
 		<h1>Hello World</h1>
