--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 		<script src="https://JamieRRichards.github.io/bootstrap/js/bootstrap.min.js"> </script>
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<div class="container">
+  		<h1>Hello World</h1>
+		</div>
 		<p>This is a test.</p>
 	</body>
 </html>
