--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 		<script src="https://JamieRRichards.github.io/bootstrap/js/bootstrap.min.js"> </script>
 	</head>
 	<body>
+		<nav class="navbar navbar-light bg-light">
+  		<a class="navbar-brand" href="#">Home</a>
+		</nav>
 		<div class="container">
   		<h1>Hello World</h1>
 		</div>
