--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Welcome to my website!</title>
-		<link href="https://JamieRRichards.github.io/bootstrap/css/bootstrap.min.css">
+		<link href="https://JamieRRichards.github.io/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 		<script src="https://JamieRRichards.github.io/bootstrap/js/bootstrap.min.js"> </script>
 	</head>
 	<body>
