--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 		<script src="https://JamieRRichards.github.io/bootstrap/js/bootstrap.min.js"> </script>
 	</head>
 	<body>
-		<nav class="navbar navbar-light bg-light">
+		<nav class="navbar sticky-top navbar-dark bg-dark">
   		<a class="navbar-brand" href="#">Home</a>
 		</nav>
 		<div class="container">
   		<h1>Hello World</h1>
 		</div>
 		<p>This is a test.</p>
+		<nav class="navbar navbar-dark bg-dark">
+  		<a class="navbar-brand">Jamie Richards</a>
+		</nav>
 	</body>
 </html>
