--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Jamie Richards | ePortfolio</title>
+        <title>Jamie Richards</title>
         <!-- Font Awesome icons (free version)-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -34,11 +34,11 @@
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/Picture1.png" alt="">
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading mb-0">Jamie Richards ePortfolio</h1>
+                <h1 class="masthead-heading mb-0">Jamie Richards <br/><br/>ePortfolio</h1>
 				        <br/>
 				        <br/>
                 <!-- Masthead Subheading-->
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0">UX/UI, Web Design & Front End Developer</p>
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0">UX/UI, Web Design & Front End Development</p>
             </div>
         </header>
         <section class="page-section portfolio" id="portfolio">
@@ -46,6 +46,10 @@
                 <!-- Portfolio Section Heading-->
                 <div class="text-center">
                     <h2 class="page-section-heading text-secondary mb-0 d-inline-block">PORTFOLIO</h2>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <h5 class="page-section-subheading text-secondary d-inline-block">Click on the segments below to learn more about each project!</h5>
                 </div>
 				        <br/>
 				        <br/>
