--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                     <h5 class="text-secondary mb-0 text-center">Select an image to make it larger</h5> <p class="text-secondary mb-0 text-center">(Opens in new tab)</p>
                                     <br/>
                                     <!-- Portfolio Modal - Text-->
-                  									<b><p class="mb-5 text-center">The final website can be found<a href="https://users.aber.ac.uk/jar59/client_website_example/" target="_blank"> here</a>.</b> </p>
+                  									<b><p class="mb-5 text-center">The final website can be found<a href="https://jamierrichards.github.io/project_website/index.html" target="_blank"> here</a>.</b> </p>
                                     <div class="text-center">
                                       <h3>Skills & Technologies Used</h3>
                                     </div>
@@ -209,7 +209,7 @@
                                       <a href="assets/img/portfolio/prototype4.png" target="_blank">
                                         <img class="img-fluid rounded mb-5" src="assets/img/portfolio/prototype4.png" alt="Project Updated Stream Schedule"/>
                                       </a>
-                                      <b><p>The final website can be found<a href="https://users.aber.ac.uk/jar59/client_website_example/" target="_blank"> here.</a> </p></b>
+                                      <b><p>The final website can be found<a href="https://jamierrichards.github.io/project_website/index.html" target="_blank"> here.</a> </p></b>
                                     </div>
                                     <br/>
 
