--- a/project_website/about.html
+++ b/project_website/about.html
@@ -21,10 +21,10 @@
       <a class="navbar-brand" href="https://discord.gg/pNDkwES" target="_blank">
         <img src="images/Discord/Discord-Logo-White.png" width="30" height="30" alt="discordlogo">
       </a>
-      <a class="navbar-brand" href="https://twitter.com/ImBarnacleBoy" target="_blank">
+      <a class="navbar-brand" href="https://twitter.com" target="_blank">
         <img src="images/Twitter/Twitter_Social_Icon_Rounded_Square_White.png" width="30" height="30" alt="twitterlogo">
       </a>
-      <a class="navbar-brand" href="https://twitch.com/Purple_foundation" target="_blank">
+      <a class="navbar-brand" href="https://twitch.tv" target="_blank">
         <img src="images/Twitch/TwitchGlitchWhite.png" width="30" height="30" alt="twitchlogo">
       </a>
       <hr/>
@@ -113,7 +113,7 @@
       <p>My name is David, but most people know me as Purple or Purple Foundation. I am an eighteen-year-old video game
          live streamer and video game enthusiast who lives in Wales.</p>
       <p>I live stream five times a week for around five hours at a time and you can find me at
-         <a href="http://www.twitch.tv/Purple_Foundation" target="_blank">twitch.tv/Purple_Foundation</a></p>
+         <a href="http://www.twitch.tv/" target="_blank">twitch.tv</a></p>
       <p>My live streams are focused around speedrunning. <br /> Speedrunning is trying to beat a game as fast as possible
          and there are thousands of games and types of speedruns available.</p>
       <p>My current game that I play most frequently while live streaming is The SpongeBob SquarePants Movie,
@@ -152,9 +152,9 @@
       <br/>
       <hr style="background-color: #351c75; height: 18px;">
       <br/>
-      <p><a href="http://users.aber.ac.uk/jar59/cs39930/blog.html">Click here to view my blog</a></p>
+      <p><a href="https://jamierrichards.github.io/blog.html">Click here to view my blog</a></p>
       <br/>
-      <p><a href="http://users.aber.ac.uk/jar59/cs39930/social.html">Click here to find my social media links</a></p>
+      <p><a href="https://jamierrichards.github.io/social.html">Click here to find my social media links</a></p>
     </div>
   </div>
 </div>
