--- a/project_website/blog.html
+++ b/project_website/blog.html
@@ -21,10 +21,10 @@
       <a class="navbar-brand" href="https://discord.gg/pNDkwES" target="_blank">
         <img src="images/Discord/Discord-Logo-White.png" width="30" height="30" alt="discordlogo">
       </a>
-      <a class="navbar-brand" href="https://twitter.com/ImBarnacleBoy" target="_blank">
+      <a class="navbar-brand" href="https://twitter.com/" target="_blank">
         <img src="images/Twitter/Twitter_Social_Icon_Rounded_Square_White.png" width="30" height="30" alt="twitterlogo">
       </a>
-      <a class="navbar-brand" href="https://twitch.com/Purple_foundation" target="_blank">
+      <a class="navbar-brand" href="https://twitch.com/" target="_blank">
         <img src="images/Twitch/TwitchGlitchWhite.png" width="30" height="30" alt="twitchlogo">
       </a>
       <hr/>
@@ -98,13 +98,6 @@
       <h1>Welcome to my blog</h1>
     </div>
     <br/>
-    <div class="row buttonalign">
-      <div class="float-right">
-        <form action="blog/blog_insert.html">
-          <button class="btn btn-primary btn-lg">Add post</button>
-        </form>
-      </div>
-    </div>
   </div>
 </div>
 
@@ -117,7 +110,7 @@
 
 <!--The section below is what ouputs each blog post. PHP is used to echo out
     text in the database as well as a container for each post.-->
-
+<!--
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-7">
@@ -191,6 +184,7 @@
       $posts = null;
       $conn = null;
       ?>
+-->
     <!--The section below is normal HTML as I don't need to retrieve dynamic content here.-->
     </div>
     <div class="col-md-1">
