--- a/project_website/gamelist.html
+++ b/project_website/gamelist.html
@@ -21,10 +21,10 @@
       <a class="navbar-brand" href="https://discord.gg/pNDkwES" target="_blank">
         <img src="images/Discord/Discord-Logo-White.png" width="30" height="30" alt="discordlogo">
       </a>
-      <a class="navbar-brand" href="https://twitter.com/ImBarnacleBoy" target="_blank">
+      <a class="navbar-brand" href="https://twitter.com" target="_blank">
         <img src="images/Twitter/Twitter_Social_Icon_Rounded_Square_White.png" width="30" height="30" alt="twitterlogo">
       </a>
-      <a class="navbar-brand" href="https://twitch.com/Purple_foundation" target="_blank">
+      <a class="navbar-brand" href="https://twitch.tv" target="_blank">
         <img src="images/Twitch/TwitchGlitchWhite.png" width="30" height="30" alt="twitchlogo">
       </a>
       <hr/>
@@ -92,27 +92,12 @@
     <div class="col">
       <h1>Achievements</h1>
     </div>
-    <br/>
-    <div class="row buttonalign">
-      <div class="float-right">
-        <form action="achievements/achievement_insert.html">
-          <button class="btn btn-primary btn-lg">Add achievement</button>
-        </form>
-        <br/>
-      </div>
-    </div>
   </div>
 </div>
 
 <!--The section below goes next to the main heading of the page. It includes a
     genreal link to the client's profile on Speedrun.com where users can find all
     of the clients achievements-->
-
-<div class="container-fluid">
-  <div class="row float-right" style="margin-right: 1%;">
-      <h6>Check out all my achivements over at <a href="https://speedrun.com/user/Purple" target="_blank">speedrun.com/Purple</a></h6>
-  </div>
-</div>
 
 <br/>
 
@@ -140,7 +125,7 @@
           <br/> <br/>But these are just a selected few of all my Speedrunning achievements. If you want
           to view all of my Speedrunning achievements for every single game I've played, (which is a lot!)
           then check out my
-          <a href="https://speedrun.com/user/Purple" target="_blank"> speedrun.com </a> profile!</h5>
+          <a href="https://speedrun.com" target="_blank"> speedrun.com </a> profile!</h5>
     </div>
   </div>
 </div>
@@ -161,7 +146,7 @@
 <div class="container-fluid" style="text-align: center;">
   <div class="row">
     <div class="col">
-      <a href="achievements/tssm_achievements.html">
+      <a href="https://jamierrichards.github.io/project_website/achievements/tssm_achievements.html">
         <img src="images/Games/tssm.png" width="256" height="360" alt="Game cover art from The SpongeBob SquarePants Movie Game">
           <div class="container-fluid" style="width: 256px;">
             <h5>The SpongeBob SquarePants Movie</h5>
@@ -170,7 +155,7 @@
       <br/>
     </div>
     <div class="col">
-      <a href="achievements/bfbb_achievements.html">
+      <a href="https://jamierrichards.github.io/project_website/achievements/bfbb_achievements.html">
         <img src="images/Games/bfbb.png" width="256" height="360" alt="Game cover art from SpongeBob SquarePants Battle for Bikini Bottom">
           <div class="container-fluid" style="width: 256px;">
             <h5>SpongeBob SquarePants Battle for Bikini Bottom</h5>
@@ -179,7 +164,7 @@
       <br/>
     </div>
     <div class="col">
-      <a href="achievements/shar_achievements.html">
+      <a href="https://jamierrichards.github.io/project_website/achievements/shar_achievements.html">
         <img src="images/Games/shar.png" width="256" height="360" alt="Game cover art from The Simpsons: Hit and Run">
           <div class="container-fluid" style="width: 256px;">
             <h5>The Simpsons: Hit & Run</h5>
