--- a/project_website/login.html
+++ b/project_website/login.html
@@ -21,10 +21,10 @@
       <a class="navbar-brand" href="https://discord.gg/pNDkwES" target="_blank">
         <img src="images/Discord/Discord-Logo-White.png" width="30" height="30" alt="discordlogo">
       </a>
-      <a class="navbar-brand" href="https://twitter.com/ImBarnacleBoy" target="_blank">
+      <a class="navbar-brand" href="https://twitter.com/" target="_blank">
         <img src="images/Twitter/Twitter_Social_Icon_Rounded_Square_White.png" width="30" height="30" alt="twitterlogo">
       </a>
-      <a class="navbar-brand" href="https://twitch.com/Purple_foundation" target="_blank">
+      <a class="navbar-brand" href="https://twitch.com/" target="_blank">
         <img src="images/Twitch/TwitchGlitchWhite.png" width="30" height="30" alt="twitchlogo">
       </a>
       <hr/>
