--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
               									  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/javascriptgame.png" alt="JavaScipt Game Canvas"/>
                                 </a>
                                 <!-- Portfolio Modal - Text-->
-              									<b><p class="mb-5 text-center">The game can be found <a href="https://users.aber.ac.uk/jar59/cs25320_cw/Part2_own_game/about.html" target="_blank"> here.</a> </p></b>
+              									<b><p class="mb-5 text-center">The game can be found <a href="https://jamierrichards.github.io/project_website/index.html" target="_blank"> here.</a> </p></b>
                                 <div class="text-center">
                                   <h3>Skills & Technologies Used</h3>
                                 </div>
