--- a/project_website/about.html
+++ b/project_website/about.html
@@ -152,9 +152,9 @@
       <br/>
       <hr style="background-color: #351c75; height: 18px;">
       <br/>
-      <p><a href="https://jamierrichards.github.io/blog.html">Click here to view my blog</a></p>
+      <p><a href="blog.html">Click here to view my blog</a></p>
       <br/>
-      <p><a href="https://jamierrichards.github.io/social.html">Click here to find my social media links</a></p>
+      <p><a href="social.html">Click here to find my social media links</a></p>
     </div>
   </div>
 </div>
