--- a/project_website/social.html
+++ b/project_website/social.html
@@ -21,10 +21,10 @@
       <a class="navbar-brand" href="https://discord.gg/pNDkwES" target="_blank">
         <img src="images/Discord/Discord-Logo-White.png" width="30" height="30" alt="discordlogo">
       </a>
-      <a class="navbar-brand" href="https://twitter.com/ImBarnacleBoy" target="_blank">
+      <a class="navbar-brand" href="https://twitter.com/" target="_blank">
         <img src="images/Twitter/Twitter_Social_Icon_Rounded_Square_White.png" width="30" height="30" alt="twitterlogo">
       </a>
-      <a class="navbar-brand" href="https://twitch.com/Purple_foundation" target="_blank">
+      <a class="navbar-brand" href="https://twitch.com/" target="_blank">
         <img src="images/Twitch/TwitchGlitchWhite.png" width="30" height="30" alt="twitchlogo">
       </a>
       <hr/>
@@ -138,13 +138,13 @@
       <p>Join my discord server to interact with me and the community daily</p>
     </div>
     <div class="col">
-      <a class="navbar-brand" href="https://twitter.com/ImBarnacleBoy" target="_blank">
+      <a class="navbar-brand" href="https://twitter.com/" target="_blank">
         <img src="images/Twitter/Twitter_Social_Icon_Rounded_Square_Color.png" width="150" height="150" alt="twitter_logo">
       </a>
       <p><br/>Follow me on Twitter for updates about the blog and other information about the stream</p>
     </div>
     <div class="col">
-      <a class="navbar-brand" href="https://twitch.com/Purple_foundation" target="_blank">
+      <a class="navbar-brand" href="https://twitch.com/" target="_blank">
         <img src="images/Twitch/TwitchExtrudedWordmarkPurple.png" width="300" height="110" alt="twitch_logo">
       </a>
       <p><br/>Follow me on Twitch to find out when I'm live. Also, consider subscribing to me for only £5 a month
