--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 				        <br/>
                 <!-- Masthead Subheading-->
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0">UX/UI, Web Design & Front End Development</p>
+                <br/>
+                <br/>
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0">*Please note, this website is currently under construction*</p>
             </div>
         </header>
         <section class="page-section portfolio" id="portfolio">
