--- a/project_website/achievements/tssm_achievements.html
+++ b/project_website/achievements/tssm_achievements.html
@@ -21,10 +21,10 @@
       <a class="navbar-brand" href="https://discord.gg/pNDkwES" target="_blank">
         <img src="../images/Discord/Discord-Logo-White.png" width="30" height="30" alt="discordlogo">
       </a>
-      <a class="navbar-brand" href="https://twitter.com/ImBarnacleBoy" target="_blank">
+      <a class="navbar-brand" href="https://twitter.com/" target="_blank">
         <img src="../images/Twitter/Twitter_Social_Icon_Rounded_Square_White.png" width="30" height="30" alt="twitterlogo">
       </a>
-      <a class="navbar-brand" href="https://twitch.com/Purple_foundation" target="_blank">
+      <a class="navbar-brand" href="https://twitch.com/" target="_blank">
         <img src="../images/Twitch/TwitchGlitchWhite.png" width="30" height="30" alt="twitchlogo">
       </a>
       <hr/>
@@ -95,16 +95,6 @@
   </div>
 </div>
 
-<!--The section below goes next to the main heading of the page. It includes a
-    genreal link to the client's profile on Speedrun.com where users can find all
-    of the clients achievements-->
-
-<div class="container-fluid">
-  <div class="row float-right" style="margin-right: 1%;">
-      <h6>Check out all my achivements over at <a href="https://speedrun.com/user/Purple" target="_blank">speedrun.com/Purple</a></h6>
-  </div>
-</div>
-
 <br/>
 <!--The hr tag is used to seperate different parts of the webpage. -->
 <hr style="background-color: black;">
@@ -153,7 +143,7 @@
         <br/>
         <p>The ranking in the table below is accurate upon upload. Ranking is determined by comparing
           my time to other community member times on
-        <a href="https://speedrun.com/tssm" target="_blank"> speedrun.com<a></p>
+        <a href="https://speedrun.com/" target="_blank"> speedrun.com<a></p>
     </div>
   </div>
 </div>
@@ -175,6 +165,20 @@
     The Bootstrap tables documentation page was very helpful in settings this up.
     Link: https://getbootstrap.com/docs/4.0/content/tables/ -->
 
+<div class="container-fluid">
+  <div class="row">
+    <div class="col text-center">
+      <h5>*Please note, for the original website the below was created using PHP. As this website is hosted via Github (No web server) the below is an example of what it looked like when setup.*</h5>
+        <br/>
+      <h5>To view original PHP code, please view page source. It has been commented out</h5>
+    </div>
+  </div>
+</div>
+
+<br/>
+
+<br/>
+
 <div class="table-responsive">
   <table class="table table-hover table-bordered" align="center" style="width: 75%;">
     <thead class="thead-dark">
@@ -188,6 +192,7 @@
       </tr>
     </thead>
     <tbody>
+      <!--
       <?php
         /*The following section requires the files below to be accessible in order for this PHP
         file to run. If these files are not available then the PHP file will produce a fatal error.*/
@@ -238,6 +243,7 @@
         $achievements = null;
         $conn = null;
       ?>
+      -->
     </tbody>
   </table>
 </div>
@@ -249,10 +255,8 @@
 <div class="container-fluid" >
   <div class="row" style="text-align: center;">
     <div class="col">
-      <p>If you want to check out every verified Speedrun of the game check out
-        <a href="https://speedrun.com/tssm" target="_blank"> The SpongeBob SquarePants Movie
-          speedrun.com</a> page. <br/>There are over <strong>100</strong> unique Speedruns of this
-          game with multiple categories!</p>
+      <p>If you want to check out other speedruns check out
+        <a href="https://speedrun.com" target="_blank"> speedrun.com</a> page.</p>
     </div>
   </div>
 </div>
