--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0">UX/UI, Web Design & Front End Development</p>
                 <br/>
                 <br/>
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0">*Please note, this website is currently under construction*</p>
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0">*Please note, this website is currently under construction. Apologise for the inconvenience caused*</p>
             </div>
         </header>
         <section class="page-section portfolio" id="portfolio">
