--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                   <br/>
                                   <!-- Portfolio Modal - Text-->
                                   <div class="text-center">
-                                    <p class="mb-5">Currently, I am working on UX/UI game designs. Check out the section below to view my work so far!</p>
+                                    <p class="mb-5">Currently, I am moving this website to GitHub Pages as it was previously hosted by my University which I have since lost access to.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                   </div>
                               </div>
@@ -411,10 +411,7 @@
                                     <h5 class="text-secondary mb-0">Select an image to make it larger</h5> <p class="text-secondary mb-0 text-center">(Opens in new tab)</p>
                                     <br/>
                                     <h5>Background</h5>
-                                    <p>Cyberpunk 2077 is one of the most anticipated games of the year, however, there is not much footage of the game. So, I wanted to create the main menu UI based on the little information that has been shown so far.</p>
-                                    <br/>
-                                    <h5>Research</h5>
-                                    <p>First, I researched the game developers' previous game <a href="https://thewitcher.com/en/witcher3" target="_blank">The Witcher 3</a>, where I investigated the main menu UI design. </p>
+                                    <p>Cyberpunk 2077 was one of the most anticipated games of 2020. I created the below main menu concept art prior to the games release</p>
                                     </div>
                                     <!-- Portfolio Modal - Text-->
                                     <a href="assets/img/portfolio/CB77Menu.png" target="_blank">
@@ -445,10 +442,10 @@
                                         <h5 class="text-secondary mb-0">Select an image to make it larger</h5> <p class="text-secondary mb-0 text-center">(Opens in new tab)</p>
                                         <br/>
                                         <h5>Background</h5>
-                                        <p>While learning to use <a href="https://www.figma.com/" target="_blank">Figma</a>, I decided to create a UX/UI for a mobile game. I settled on a car racing game and began creating UX designs for the game.</p>
+                                        <p>While learning to use <a href="https://www.figma.com/" target="_blank">Figma</a>, I decided to create a concept UI for a mobile game.</p>
                                         <br/>
                                         <h5>Wireframe designs</h5>
-                                        <p>The first wireframe designs I made were to establish the menu system and the general layout of a particular section of the game.</p>
+                                        <p>The below wireframe designs are similar but showcase different potential layouts for this hypothentical mobile game.</p>
                                         </div>
                                         <!-- Portfolio Modal - Text-->
                                         <a href="assets/img/portfolio/carux.png" target="_blank">
@@ -457,9 +454,6 @@
                                         <a href="assets/img/portfolio/carux1.png" target="_blank">
                                           <img class="img-fluid rounded mb-5" src="assets/img/portfolio/carux1.png" alt="Cyberpunk 2077 Main Menu Concept Art"/>
                                         </a>
-                                        <div class="text-center">
-                                          <p>Both designs are similar, however, I prefer the 2nd wireframe design so I will be creating a UI design based on that wireframe.</P>
-                                        </div>
                                         <div class="text-center">
                                           <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                       </div>
@@ -484,7 +478,7 @@
                         <p class="pre-wrap lead">Passionate BSc (Hons) Internet Computing and System Administration graduate. Graduating with a strong 2:1 from Aberystwyth University.</p>
                     </div>
                     <div class="col-lg-4 mr-auto">
-                        <p class="pre-wrap lead">I am a hard-working and enthusiastic individual who strives for perfection in every task. I work well with others and take up a natural leadership role within groups. Currently looking for a job in UI/UX design or Front End Web Development.</p>
+                        <p class="pre-wrap lead">I am a hard-working and enthusiastic individual who strives for perfection in every task. I work well with others and take up a natural leadership role within groups. Currently looking for a job in Front End Web Development.</p>
                     </div>
                 </div>
             </div>
