--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
               									  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/javascriptgame.png" alt="JavaScipt Game Canvas"/>
                                 </a>
                                 <!-- Portfolio Modal - Text-->
-              									<b><p class="mb-5 text-center">The game can be found <a href="https://jamierrichards.github.io/project_website" target="_blank"> here.</a> </p></b>
+              									<b><p class="mb-5 text-center">The game can be found <a href="https://jamierrichards.github.io/game" target="_blank"> here.</a> </p></b>
                                 <div class="text-center">
                                   <h3>Skills & Technologies Used</h3>
                                 </div>
