--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0">UX/UI, Web Design & Front End Development</p>
                 <br/>
                 <br/>
-                <p class="pre-wrap masthead-subheading font-weight-light mb-0">*Please note, this website is currently under construction. Apologise for the inconvenience caused*</p>
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0">*Please note, this website is currently under construction from being migrated. Apologise for the inconvenience caused*</p>
             </div>
         </header>
         <section class="page-section portfolio" id="portfolio">
@@ -343,7 +343,7 @@
               									  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/javascriptgame.png" alt="JavaScipt Game Canvas"/>
                                 </a>
                                 <!-- Portfolio Modal - Text-->
-              									<b><p class="mb-5 text-center">The game can be found <a href="https://jamierrichards.github.io/game" target="_blank"> here.</a> </p></b>
+              									<b><p class="mb-5 text-center">The game can be found <a href="https://jamierrichards.github.io/game/mygame.html" target="_blank"> here.</a> </p></b>
                                 <div class="text-center">
                                   <h3>Skills & Technologies Used</h3>
                                 </div>
@@ -524,7 +524,7 @@
         </footer>
         <!-- Copyright Section-->
         <section class="copyright py-4 text-center text-white">
-            <div class="container"><small class="pre-wrap">Copyright © Jamie Ratuszny Richards 2020 <br/><a href="https://icons8.com/" target="_blank">icons8.com</small></div>
+            <div class="container"><small class="pre-wrap">Copyright © Jamie Ratuszny Richards 2022 <br/><a href="https://icons8.com/" target="_blank">icons8.com</small></div>
         </section>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed"><a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
