--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                                   <br/>
                                   <!-- Portfolio Modal - Text-->
                                   <div class="text-center">
-                                    <p class="mb-5">Currently, I am moving this website to GitHub Pages as it was previously hosted by my University which I have since lost access to.</p>
+                                    <p class="mb-5">Currently, I am migrating this website to GitHub Pages as it was previously hosted by my University which I have since lost access to.</p>
                                     <button class="btn btn-primary" href="#" data-dismiss="modal"><i class="fas fa-times fa-fw"></i>Close Window</button>
                                   </div>
                               </div>
