--- a/game/about.html
+++ b/game/about.html
@@ -1,8 +1,11 @@
-<!-- Author: Jamie Ratuszny Richards - jar59@aber.ac.uk -->
+<!-- Author: Jamie Ratuszny Richards -->
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/website.css" rel="stylesheet">
     <title>Ball Dribble</title>
 
     <!--
@@ -17,7 +20,8 @@
 </div>
 
 <div id="menu">
-    <p><a href="mygame.html">Game</a></p>
+  <br/>
+    <p><a href="index.html">Game</a></p>
     <hr />
     <p><a href="about.html">About The Game</a></p>
     <hr />
@@ -25,6 +29,7 @@
 </div>
 
 <div id="about">
+  <br/>
 <h2 style="font-family:Calibri;">About the Game</h2>
 <p>The game I created has taken great inspiration from the game "Flappy Bird". Originally I wasn't planning on making it
     this way, however, it seemed to evolve to become this over the development process. Once I had a moving object controlled by the player,
