--- a/game/index.html
+++ b/game/index.html
@@ -1,8 +1,12 @@
-<!-- Author: Jamie Ratuszny Richards - jar59@aber.ac.uk -->
+<!-- Author: Jamie Ratuszny Richards -->
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/website.css" rel="stylesheet">
     <title>Ball Dribble</title>
 
     <!--
@@ -17,21 +21,12 @@
 </div>
 
 <div id="menu">
-    <p><a href="mygame.html">Game</a></p>
+  <br/>
+    <p><a href="index.html">Game</a></p>
     <hr/>
     <p><a href="about.html">About The Game</a></p>
     <hr/>
     <p><a href="help.html">Help</a></p></div>
-
-<div id="form">
-    <h2>To save your score please enter your name below!</h2>
-    <form action="/nothinglol.php" target="_self" method="GET">
-        <input type="text" name="playername">
-        <br>
-        <br>
-        <input type="submit">
-    </form>
-</div>
 
 <div id="about">
     <!-- Below I have included an error message that will display if the canvas is not created -->
