--- a/game/help.html
+++ b/game/help.html
@@ -1,8 +1,11 @@
-<!-- Author: Jamie Ratuszny Richards - jar59@aber.ac.uk -->
+<!-- Author: Jamie Ratuszny Richards -->
 <!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/website.css" rel="stylesheet">
     <title>Ball Dribble</title>
 
     <!--
@@ -18,13 +21,15 @@
 </div>
 
 <div id="menu">
-    <p><a href="mygame.html">Game</a></p>
+  <br/>
+    <p><a href="index.html">Game</a></p>
     <hr />
     <p><a href="about.html">About The Game</a></p>
     <hr />
     <p><a href="help.html">Help</a></p>
 </div>
 <div id="about">
+  <br/>
     <h2>Need Help?</h2>
     <h3>Game Objectives</h3>
     <p>The objective of the game as the player is to maneuver the ball through the blocks coming towards you. These blocks will randomly
@@ -36,7 +41,7 @@
         or you can use the other keys I included: <img src="keyW.jpg" alt="Keyboard W Key"> <img src="keyS.jpg" alt="Keyboard S Key"></p>
 
     <h3>Contact</h3>
-    <p>If you have any other problems with the game or the web page you can contact me at <a href="mailto:jar59@aber.ac.uk"> jar59@aber.ac.uk</a></p>
+    <p>If you have any other problems with the game or the web page you can contact me at <a href="mailto:jamierichards1@hotmail.co.uk"> jamierichards1@hotmail.co.uk</a></p>
 </div>
 
 <div id="footer">
